--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
     </div>
     <div class="gallery"></div>
     <button type="button" class="load-more is-hidden">Load more</button>
-    <script type="module" src="./index.js"></script>
+    <script  src="./index.js" type="module"></script>
   </body>
 </html>
