--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search best image</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-   
-  </head>
+     </head>
   <body>
     <div class="search-box">
       <form class="search-form" id="search-form">
@@ -21,6 +20,6 @@
     </div>
     <div class="gallery"></div>
     <button type="button" class="load-more is-hidden">Load more</button>
-    <script  src="index.js" type="module"></script>
+      <script src="./index.js" type="module"></script>
   </body>
 </html>
