--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search best image</title>
+    <title>Search best images</title>
     <link rel="stylesheet" href="./sass/index.scss" />
      </head>
   <body>
